--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "social network for devs",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
