--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "social network for devs",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix && npm run build -- prefix client" 
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix && npm run build -- prefix client"
   },
   "repository": {
     "type": "git",
@@ -28,6 +26,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "gravatar": "^1.8.2",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "request": "^2.88.2"
